Zen 7.x-3.0, 2011-04-06
-----------------------
- #774836 by hefox: Check if node $title is set before outputting
- #992616 by JohnAlbin and adrinux: Comments in layout RTL stylesheets are incorrect
- #822570 by JohnAlbin and AaronCollier: Add focus styling to tabs
- #1092372 by JohnAlbin and davebv: Simplify pages styling
- #1115330: Styling in ie.css is only needed for IE7 and earlier
- #481952 by kdebaas and JohnAlbin: Add vertical rhythm to line heights and margins
- #370419: Remove messages.css in favor of core's styling
- #1102770: Installing Zen prevents Appearance page from loading on some systems
- #835982 by JohnAlbin, mverbaar, marcvangend: Drush support for sub-theme creation
- #1084504 by Crossfeed, komal.savla, Network and JohnAlbin: PHP Error when secondary menu or menu module is disabled
- #1085422 by hswong3i: Highlighted region's machine name doesn't match core
- #1082242 by joeyabbs: Maintenance page is missing span around site name
- #1074822: Update fields.css to use new classes for fields in core
- #1110842: Comment preview color is missing due to mis-targeted CSS rule
- #1110650: Anonymous comment class is broken in core
- #1079010: The secondary links heading, "Secondary menu", is wrong
- #1078994: Move secondary menu links from footer to header
- #1072302: Use element-focusable class for skip link accessibility
- #1072268: Zen theme doesn't load RTL styles
- #929630 by juan_g and akalata: URL for overriding stylesheets documentation has changed
- #1069106: Update theme-settings.php to use Form API states
- #950206 by n8tron, Mtro and JohnAlbin: Update README in STARTERKIT
- #1053874 by n8tron and JohnAlbin: Update README in STARTERKIT/templates
- #1064706: Use $variables instead of $vars to match D7 code snippets
- #1067062: Remove duplicate classes (like node-type-TYPE) from node.tpl.php
- #940882: $readmore variable is missing from node.tpl.php
- #950538 by hswong3i: User pictures should use .user-picture class