@@ -118,6 +118,7 @@ settings[zen_breadcrumb_separator] = ' › '
 settings[zen_breadcrumb_home]      = 1
 settings[zen_breadcrumb_trailing]  = 1
 settings[zen_breadcrumb_title]     = 0
+settings[zen_jump_link_target]     = main-menu
 settings[zen_rebuild_registry]     = 1
 settings[zen_wireframes]           = 0
 
