@@ -47,21 +47,25 @@ ul.primary li a .tab {
   background: url(../images/tab-right-ie6.png) no-repeat right -38px;
 }
 
-ul.primary li a:hover {
+ul.primary li a:hover,
+ul.primary li a:focus {
   background: url(../images/tab-left-ie6.png) no-repeat left -76px;
 }
 
-ul.primary li a:hover .tab {
+ul.primary li a:hover .tab,
+ul.primary li a:focus .tab {
   background: url(../images/tab-right-ie6.png) no-repeat right -76px;
 }
 
 ul.primary li.active a,
-ul.primary li.active a:hover {
+ul.primary li.active a:hover,
+ul.primary li.active a:focus {
   background: url(../images/tab-left-ie6.png) no-repeat left 0;
 }
 
 ul.primary li.active a .tab,
-ul.primary li.active a:hover .tab {
+ul.primary li.active a:hover .tab,
+ul.primary li.active a:focus .tab {
   background: url(../images/tab-right-ie6.png) no-repeat right 0;
 }
 
