@@ -10,23 +10,23 @@
 #content,
 .no-sidebars #content {
   float: right;
-  margin-left: -960px;
-  margin-right: 0; /* Negative value of #content's width + left margin. */
+  margin-left: -960px; /* Negative value of #content's width + right margin. */
+  margin-right: 0;
 }
 
 .sidebar-first #content {
-  margin-left: -960px; /* The width of .region-sidebar-first. */
-  margin-right: 200px; /* Negative value of #content's width + left margin. */
+  margin-left: -960px; /* Negative value of #content's width + right margin. */
+  margin-right: 200px; /* The width of .region-sidebar-first. */
 }
 
 .sidebar-second #content {
-  margin-left: -760px;
-  margin-right: 0; /* Negative value of #content's width + left margin. */
+  margin-left: -760px; /* Negative value of #content's width + right margin. */
+  margin-right: 0;
 }
 
 .two-sidebars #content {
-  margin-left: -760px; /* The width of .region-sidebar-first */
-  margin-right: 200px; /* Negative value of #content's width + left margin. */
+  margin-left: -760px; /* Negative value of #content's width + right margin. */
+  margin-right: 200px; /* The width of .region-sidebar-first */
 }
 
 /*
@@ -34,8 +34,8 @@
  */
 #navigation {
   float: right;
-  margin-left: -100%;
-  margin-right: 0; /* Negative value of #navigation's width + left margin. */
+  margin-left: -100%; /* Negative value of #navigation's width + right margin. */
+  margin-right: 0;
 }
 
 /*
@@ -43,8 +43,8 @@
  */
 .region-sidebar-first {
   float: right;
-  margin-left: -200px;
-  margin-right: 0; /* Negative value of .region-sidebar-first's width + left margin. */
+  margin-left: -200px; /* Negative value of .region-sidebar-first's width + right margin. */
+  margin-right: 0;
 }
 
 .region-sidebar-first .section {
@@ -56,8 +56,8 @@
  */
 .region-sidebar-second {
   float: right;
-  margin-left: -960px; /* Width of content + sidebar-first. */
-  margin-right: 760px; /* Negative value of .region-sidebar-second's width + left margin. */
+  margin-left: -960px; /* Negative value of .region-sidebar-second's width + right margin. */
+  margin-right: 760px; /* Width of content + sidebar-first. */
 }
 
 .region-sidebar-second .section {
